resources/webidl2/test/invalid/idl/duplicate-escaped.widl
interface Iroha {};
interface _Iroha {};
